fix: read ES mapping resource via stream so it works inside the jar
EsIndexInitializer used Resource.getFile(), which fails for a
classpath resource packaged in a Spring Boot jar (the resource is a
nested jar entry, not a real file). Switch to getInputStream() so
index initialization succeeds under `java -jar`.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>